--- a/styles/others.css
+++ b/styles/others.css
@@ -11,8 +11,6 @@ html {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    min-width: 650px;
-    min-height: 1000px;
 }
 
 body {
@@ -23,6 +21,7 @@ body {
     background-size: auto 100%;
     margin: 0px;
     padding: 0px;
+    background-color: black;
 }
 
 a:link {
@@ -101,6 +100,7 @@ a:active {
     grid-area: 2 / 2 / -2 / -2;
     margin-top: 10px;
     margin-bottom: 20px;
+    justify-self: center;
 }
 
 .content {
@@ -127,6 +127,10 @@ a:active {
     flex: 1;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
 .img-container {
     width: 25%;
     min-width: 250px;
@@ -144,7 +148,6 @@ a:active {
 
 .content-text {
     width: 70%;
-    min-width: 500px;
     flex-grow: 1;
     color: white;
     font-size: 1.5em;
