--- a/styles/resume.css
+++ b/styles/resume.css
@@ -11,8 +11,7 @@ html {
     width: 100%;
     margin: 0px;
     padding: 0px;
-    min-width: 650px;
-    min-height: 1000px;
+    background-color: black;
 }
 
 body {
