--- a/styles/others.css
+++ b/styles/others.css
@@ -15,7 +15,7 @@ html {
 
 body {
     background-color: black;
-    background-image: url("../images/landscape_bg.png");
+    background-image: url("../images/landscape_bg.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: auto 100%;
