--- a/styles/home.css
+++ b/styles/home.css
@@ -1,37 +1,9 @@
-* {
-    font-family: 'Red Hat Display', sans-serif;
-}
-
-.notransition * { 
-    transition: none !important; 
-} 
-
-html, body {
+body {
     height: 100%;
     width: 100%;
     margin: 0px;
     padding: 0px;
     background-color: black;
-}
-
-a:link {
-    color: white;
-    text-decoration: none;
-}
-
-a:visited {
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-    color: white;
-    text-decoration: none;
-}
-
-a:active {
-    color: white;
-    text-decoration: none;
 }
 
 .grid-container {
@@ -43,6 +15,7 @@ a:active {
     background-color: black;
     margin: 0px;
     padding: 0px;
+    width: 100vw;
 }
 
 .background {
@@ -76,45 +49,6 @@ a:active {
     z-index: 1;
     height: 100%;
     align-self: flex-end;
-}
-
-.signature {
-    grid-area: 1 / 1 / 2 / 2;
-    justify-self: flex-start;
-    color: white;
-    align-self: center;
-    padding-left: 1vw;
-}
-
-.current {
-    grid-area: 1 / 2 / 2 / 3;
-    border-radius: 20px;
-    background: linear-gradient(to bottom left, rgb(31, 186, 180), rgb(58, 148, 235));
-    position: absolute;
-    z-index: 1;
-    transition: all 0.5s;
-}
-
-.inner {
-    grid-area: 1 / 2 / 2 / 3;
-    border-radius: 20px;
-    background: black;
-    position: absolute;
-    z-index: 2;
-    transition: all 0.5s;
-}
-
-.pages {
-    display: flex;
-    grid-area: 1 / 1 / 2 / -1;
-    width: 60vw;
-    min-width: 500px;
-    justify-self: flex-end;
-    height: 100%;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 2;
-    font-size: max(1vw, 15px);
 }
 
 .hello {
